Added mixin: Analytics

--- a/kaagazz_themes/kz_default/templates/base.pug
+++ b/kaagazz_themes/kz_default/templates/base.pug
@@ -13,9 +13,7 @@ html(lang="en")
 
 		link(rel="stylesheet", href="x/dist/css/kaagazz.css")
 
-		- let analytics = page.Site().meta.json.analytics
-		if analytics != undefined
-			| !{page.Site().GetDataFileContents(analytics)}
+		+Analytics()
 
 	body
 		header
