--- a/kaagazz_themes/kz_default/templates/mixins.pug
+++ b/kaagazz_themes/kz_default/templates/mixins.pug
@@ -5,6 +5,11 @@ mixin BaseURL()
 	else
 		base(href=page.Site().meta.json.meta.SITE_URL)
 
+mixin Analytics()
+	- let analytics = page.Site().meta.json.analytics
+	if analytics != undefined
+		| !{page.Site().GetDataFileContents(analytics)}
+
 mixin HoverLinkInternal(text, url)
 	a.hover-link(href=url)
 		div.link-title= text
