--- a/kaagazz_themes/kz_default/templates/mixins.pug
+++ b/kaagazz_themes/kz_default/templates/mixins.pug
@@ -1,14 +1,7 @@
-
-mixin BaseURL()
-	if page.HasRelativeBase()
-		base(href=page.Base())
-	else
-		base(href=page.Site().meta.json.meta.SITE_URL)
-
-mixin Analytics()
-	- let analytics = page.Site().meta.json.analytics
-	if analytics != undefined
-		| !{page.Site().GetDataFileContents(analytics)}
+include mixins/head
+include mixins/header
+include mixins/article
+include mixins/footer
 
 mixin HoverLinkInternal(text, url)
 	a.hover-link(href=url)
