--- a/kaagazz_themes/kz_default/templates/mixins/footer.pug
+++ b/kaagazz_themes/kz_default/templates/mixins/footer.pug
@@ -1,4 +1,18 @@
 
+mixin CategoriesSectionFooter()
+	div.categories
+		h4 Categories Index
+		ul
+			each category in page.Site().categories
+				+CategoryWithCounter(category)
+
+mixin TagsSectionFooter()
+	div.tags
+		h4 Tags Index
+		ul
+			each tag in page.Site().tags
+				+TagWithCounter(tag)
+
 mixin InformationSectionFooter()
 	div.info
 		h4 More Information
