--- a/pages/index.page
+++ b/pages/index.page
@@ -2,7 +2,7 @@
 title: Kaagazz
 category: official
 description: Welcome to the Homepage. This is just some dummy text I put here to test the design.
-tags: blue, green
+tags: [blue, green]
 
 ====================
 
