--- a/pages/index.page
+++ b/pages/index.page
@@ -2,6 +2,7 @@
 title: Kaagazz
 description: Welcome to the Homepage. This is just some dummy text I put here to test the design.
 tags: [blue, green]
+obj: {name: Example, nick: exe}
 
 ====================
 
